deploy/kubernetes/base/envoy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.24-latest
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/envoy/envoy.yaml
          subPath: envoy.yaml
        ports:
        - name: proxy-port
          containerPort: 8080
        - name: admin-port
          containerPort: 9901
        readinessProbe:
          httpGet:
            path: /health
            port: proxy-port
          failureThreshold: 1
          periodSeconds: 5
          initialDelaySeconds: 5
      volumes:
      - name: config-volume
        configMap:
            name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: proxy-port
---
